--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +15,20 @@
   <meta property="og:url" content="https://www.avibagla.com/netelevation" />
   <meta property="og:description" content="Find the net elevation of famous dead people!" />
   <meta property="og:image" content="https://www.avibagla.com/netelevation/images/share.png" />
-  <title></title>
+
+
+
+  <!-- Compressed JS and CSS -->
+  <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css "integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous"> -->
+  <link rel=icon href="/public/icon.svg" />
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+  <!-- 
+  <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+  <title>Net Elevation</title>
 
 
   <!-- import the webpage's stylesheet -->
@@ -25,45 +39,71 @@
   <!-- import the webpage's javascript file -->
   <script src="./script.js" defer></script>
 </head>
+
 <body>
   <h1>Net Elevation</h1>
   <h4 id="top-subtitle">Find the net elevation of dead people</h4>
   <div id="description">
-    <p>When someone is born, they have an elevation at their birthplace. When that same someone dies, they have an elevation at that death place. No matter where they may have gone in their life, they have one net elevation from birth to death. Now, you can know.</p>
+    <p>When someone is born, they have an elevation at their birthplace. When that same someone dies, they have an
+      elevation at that death place. No matter where they may have gone in their life, they have one net elevation from
+      birth to death. Now, you can know.</p>
   </div>
 
   <div class="submission-section">
     <h3>Who are you looking for?</h3>
-    <input type="text" name="name" id="name-input" placeholder="famous deceased person" aria-placeholder="input a famous deceased person" aria-label="name"><button aria-label="submit button" id="submission-button">Find Elevation</button></div>
+    <input type="text" name="name" id="name-input" placeholder="famous deceased person"
+      aria-placeholder="input a famous deceased person" aria-label="name">
+    <button href="#" id="submit-button" class="button expanded" aria-label="submit button">Find Elevation</button>
+  </div>
+  <div class="submission-suggestions ">
+    <h5 class="suggestion-title">Need a suggestion?</h3>
+      <div class="suggestion-row">
+        <button class="suggestion" aria-label="submission suggestions">Abraham Lincoln</button>
+        <button class="suggestion" aria-label="submission suggestions">Amy Winehouse</button>
+          <button class="suggestion" aria-label="submission suggestions">Albert Einstein</button>
 
-    <div class="results">
-      <h3 class="result-name"></h3>
-      <div class="base stats">
-        <div class="birth">
-          <div class="birth-place"></div>
-          <div class="birthday"></div>
-          <div class="birth-elevation"></div>
+      </div>
+      <div class="suggestion-row">
+        <button class="suggestion" aria-label="submission suggestions">Marilyn Monroe</button>
+        <button class="suggestion" aria-label="submission suggestions">James Earl Jones</button>
+          <button class="suggestion" aria-label="submission suggestions">Robin Williams</button>
+      </div>
+
+      <div class="results">
+        <h3 class="result-name"></h3>
+        <div class="base stats">
+          <div class="birth">
+            <div class="birth-place"></div>
+            <div class="birthday"></div>
+            <div class="birth-elevation"></div>
+          </div>
+          <div class="death">
+            <div class="death-place"></div>
+            <div class="deathday"></div>
+            <div class="death-elevation"></div>
+          </div>
         </div>
-        <div class="death">
-          <div class="death-place"></div>
-          <div class="deathday"></div>
-          <div class="death-elevation"></div>
+        <div class="calculated stats">
+          <div class="net-elevation"></div>
+          <div class="distance"></div>
+          <div class="slope"></div>
         </div>
       </div>
-      <div class="calculated stats">
-        <div class="net-elevation"></div>
-        <div class="distance"></div>
-        <div class="slope"></div>
+
+      <div class="map-container">
+        <div id="map"></div>
       </div>
-      <div id="map"></div>
+
+
+
       <div class="comparisons">
         <div class="taller-than"></div>
         <div class="longer-than"></div>
         <div class="time-to-walk"></div>
       </div>
-    </div>
-  
+
 </body>
+
 </html>
 
 
