--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 
 <body>
   <h1>NET ELEVATION</h1>
-  <h4 id="top-subtitle">Find the net elevation of dead people</h4>
+  <h2 id="top-subtitle">find the net elevation of dead people</h2>
   <div id="description">
     <p>When someone is born, they have an elevation at their birthplace. When that same someone dies, they have an
       elevation at that death place. No matter where they may have gone in their life, they have one net elevation from
-      birth to death. Now, you can know.</p>
+      birth to death. 
+      </p>
+      <p>Now, you can know.</p>
   </div>
 
   <div class="submission-section">
@@ -75,16 +77,22 @@
       <button class="suggestion" aria-label="submission suggestions">George Carlin</button>
     </div>
   </div>
+  <!-- <div class="map-container">
+    <div id="key-map"></div>
+  </div> -->
 
   <div id="results">
-    <div class="main-result">
+    <div class="map-pre-load">
+      <div id="key-map"></div>
+    </div>
+    <!-- <div class="main-result">
       <h3 class="elevation-main-result">
         <span class="elevation-celeb-name">Amy Winehouse's</span> net elevation was
         <span class="net-elevation-number">-42 meters</span> (-137.80 ft)
       </h3>
     </div>
     <div class="map-container">
-      <div id="map"></div>
+      <div id="key-map"></div>
     </div>
 
     <div class="details">
@@ -106,7 +114,7 @@
             ft)</span>, with a distance of <span class="special-info">10.08
             km</span>, resulting in a slope of <span class="special-info">-0.42%.</span></p>
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- <div class="details">
       <h3 class="result-name">Amy Winehouse</h3>
