all right, working draft

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   <div id="description">
     <p>When someone is born, they have an elevation at their birthplace. When that same someone dies, they have an
       elevation at that death place. No matter where they may have gone in their life, they have one net elevation from
-      birth to death. 
-      </p>
-      <p>Now, you can know.</p>
+      birth to death.
+    </p>
+    <p>Now, you can know.</p>
   </div>
 
   <div class="submission-section">
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div class="submission-suggestions ">
-    <h5 class="suggestion-title">Need a suggestion?</h5>
+    <h5 class="suggestion-title">Need an idea? Gotchu:</h5>
     <div class="suggestion-row">
       <button class="suggestion" aria-label="submission suggestions">Abraham Lincoln</button>
       <button class="suggestion" aria-label="submission suggestions">Amy Winehouse</button>
@@ -80,6 +80,7 @@
   <!-- <div class="map-container">
     <div id="key-map"></div>
   </div> -->
+
 
   <div id="results">
     <div class="map-pre-load">
