--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div class="submission-suggestions ">
-    <h5 class="suggestion-title">Need an idea? Gotchu:</h5>
+    <h5 class="suggestion-title">Need an idea? Tap any of the bottom</h5>
     <div class="suggestion-row">
       <button class="suggestion" aria-label="submission suggestions">Abraham Lincoln</button>
       <button class="suggestion" aria-label="submission suggestions">Amy Winehouse</button>
