adding comparison functions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-  <h1>NET ELEVATION</h1>
+  <h1 class="marquee-title">NET ELEVATION</h1>
   <h2 id="top-subtitle">find the net elevation of dead people</h2>
   <div id="description">
     <p>When someone is born, they have an elevation at their birthplace. When that same someone dies, they have an
