so many updates, adding d3

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
+
+  <!-- d3 -->
+
+  <script src="https://d3js.org/d3.v6.js"></script>
+
   <title>Net Elevation</title>
 
 
@@ -116,6 +121,12 @@
             km</span>, resulting in a slope of <span class="special-info">-0.42%.</span></p>
       </div>
     </div> -->
+   
+
+
+    <div class="text">
+      
+    </div>
   </div>
   <!-- <div class="details">
       <h3 class="result-name">Amy Winehouse</h3>
@@ -173,14 +184,19 @@
 
 
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMP401VH5T"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  <div class="comparisons">
-    <div class="taller-than"></div>
-    <div class="longer-than"></div>
-    <div class="time-to-walk"></div>
-  </div>
+    gtag('config', 'G-DMP401VH5T');
+  </script>
+
 
 </body>
+
+
 
 </html>
 
