--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="submission-section">
     <h3>Who are you looking for?</h3>
     <div class="input-section">
-      <input type="text" name="name" id="name-input" placeholder="famous deceased person"
+      <input type="text" name="name" id="name-input" placeholder="famous deceased person" autocomplete="off"
         aria-placeholder="input a famous deceased person" aria-label="name">
       <button href="#" id="submit-button" class="button expanded" aria-label="submit button">Find Elevation</button>
     </div>
