--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="robots" content="index,follow" />
   <meta property="og:title" content="Net Elevation" />
   <meta property="og:url" content="https://www.avibagla.com/netelevation" />
-  <meta property="og:description" content="Find the net elevation of famous dead people!" />
+  <meta property="og:description" content="Find the net elevation of famous dead people. It's question you never asked" />
   <meta property="og:image" content="https://www.avibagla.com/netelevation/images/share.png" />
   <link rel="stylesheet" href="https://use.typekit.net/vlb6wjj.css">
 
@@ -53,15 +53,14 @@
   <h1 class="marquee-title">NET ELEVATION</h1>
   <h2 id="top-subtitle">find the net elevation of dead people</h2>
   <div id="description">
-    <p>When someone is born, they have an elevation at their birthplace. When that same someone dies, they have an
-      elevation at that death place. No matter where they may have gone in their life, they have one net elevation from
+    <p>When someone is born, they have an elevation at their birthplace. <br><br>When that same someone dies, they have an
+      elevation at that death place. <br><br>No matter where they may have gone in their life, they have one <span class="special-info"><i> net elevation</i></span>  from
       birth to death.
     </p>
-    <p>Now, you can know.</p>
   </div>
 
   <div class="submission-section">
-    <h3>Who are you looking for?</h3>
+    <h2>Who will you look for?</h2>
     <div class="input-section">
       <input type="text" name="name" id="name-input" placeholder="famous deceased person" autocomplete="off"
         aria-placeholder="input a famous deceased person" aria-label="name">
