adding made by me

--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 
   </div>
 
+      <footer class="footer">
+        <p>made by <a href="//www.avibagla.com" target="_blank"> Avi Bagla</a></p>
+      </footer>
+
 
 
 
