--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="canonical" href="https://www.avibagla.com/netelevation" />
   <meta name="description" content="Find the net elevation of famous dead people!" />
   <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="Net Elevation" />
+  <meta property="og:title" content="Net Elevation for Dead Famous People" />
   <meta property="og:url" content="https://www.avibagla.com/netelevation" />
   <meta property="og:description" content="Find the net elevation of famous dead people. It's question you never asked" />
   <meta property="og:image" content="https://www.avibagla.com/netelevation/images/share.png" />
