--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="canonical" href="https://www.avibagla.com/netelevation" />
   <meta name="description" content="Find the net elevation of famous dead people!" />
   <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="Net Elevation for Dead Famous People" />
+  <meta property="og:title" content="Find the Net Elevation for Dead People" />
   <meta property="og:url" content="https://www.avibagla.com/netelevation" />
-  <meta property="og:description" content="Find the net elevation of famous dead people. It's question you never asked" />
+  <meta property="og:description" content="Find the net elevation of famous dead people. It's a question you never asked, but an answer you can now get" />
   <meta property="og:image" content="https://www.avibagla.com/netelevation/images/share.png" />
   <link rel="stylesheet" href="https://use.typekit.net/vlb6wjj.css">
 
