woops commented code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <meta name="robots" content="index,follow" />
   <meta property="og:title" content="Find the Net Elevation for Dead People" />
   <meta property="og:url" content="https://www.avibagla.com/netelevation" />
-  <meta property="og:description" content="Find the net elevation of famous dead people. It's a question you never asked, but an answer you can now get" />
+  <meta property="og:description"
+    content="Find the net elevation of famous dead people. It's a question you never asked, but an answer you can now get" />
   <meta property="og:image" content="https://www.avibagla.com/netelevation/images/share.png" />
   <link rel="stylesheet" href="https://use.typekit.net/vlb6wjj.css">
 
@@ -53,8 +54,10 @@
   <h1 class="marquee-title">NET ELEVATION</h1>
   <h2 id="top-subtitle">find the net elevation of dead people</h2>
   <div id="description">
-    <p>When someone is born, they have an elevation at their birthplace. <br><br>When that same someone dies, they have an
-      elevation at that death place. <br><br>No matter where they may have gone in their life, they have one <span class="special-info"><i> net elevation</i></span>  from
+    <p>When someone is born, they have an elevation at their birthplace. <br><br>When that same someone dies, they have
+      an
+      elevation at that death place. <br><br>No matter where they may have gone in their life, they have one <span
+        class="special-info"><i> net elevation</i></span> from
       birth to death.
     </p>
   </div>
@@ -81,54 +84,26 @@
       <button class="suggestion" aria-label="submission suggestions">George Carlin</button>
     </div>
   </div>
-  <!-- <div class="map-container">
-    <div id="key-map"></div>
-  </div> -->
 
 
   <div id="results">
     <div class="map-pre-load">
       <div id="key-map"></div>
     </div>
-      
-    </div>
-  </div>
-  <!-- <div class="details">
-      <h3 class="result-name">Amy Winehouse</h3>
-      <div class="image-container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Amy_Winehouse_f4962007_crop.jpg"
-          alt="Photo of Amy Winehouse">
-      </div>
-      <div class="base stats">
-        <div class="birth">
-          <div class="birth-place">Southgate, London</div>
-          <div class="birthday">9/13/1983</div>
-          <div class="birth-elevation">76 meters</div>
-        </div>
-        <div class="death">
-          <div class="death-place">Camden Town</div>
-          <div class="deathday">7/22/2011</div>
-          <div class="death-elevation">34 meters</div>
-        </div>
-      </div>
 
-      <div class="calculated stats">
-        <div class="net-elevation">Net Elevation Change: -42 meters</div>
-        <div class="distance">Distance: 10.08 km</div>
-        <div class="slope">Slope: -0.42%</div>
-      </div>
-    </div> -->
+  </div>
+  </div>
 
   </div>
 
-  
+
 
 
   </div>
 
-      <footer class="footer">
-        <p>made by <a href="//www.avibagla.com" target="_blank"> Avi Bagla</a></p>
-      </footer>
+  <footer class="footer">
+    <p>made by <a href="//www.avibagla.com" target="_blank"> Avi Bagla</a></p>
+  </footer>
 
 
 
